# MentorGraph

./: .env.example  .gitignore  DeploymentGuide.md  README.md  pyproject.toml
hr_remediation_agent/: __init__.py  agent.py  config.py  data_tools.py  deploy_gemini.py  requirements.txt  run_local.py  setup_mock_bq.py
