[project]
name = "mentor-graph"
version = "0.1.0"
description = "Multi-node L&D Co-pilot built on Google Cloud ADK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=2.0.0",
    "google-cloud-bigquery>=3.10.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hr_remediation_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
