[project]
name = "mentor-graph"
version = "0.1.0"
description = "Multi-node L&D Co-pilot built on Google Cloud ADK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=2.0.0",
    "google-cloud-bigquery>=3.10.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hr_remediation_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ==============================================================================
# agents-cli Deployment Configuration
# ==============================================================================
# agents-cli reads this block to determine WHERE and HOW to deploy the agent.
# - agents-cli infra single-project  → uses project + region to provision
#   Artifact Registry, Cloud Storage staging bucket, and Service Account.
# - agents-cli deploy                → uses deployment_target + entry_point
#   to build the container and boot it in the Agent Runtime.
# Fill in `project` with your real GCP Project ID before running infra/deploy.
[tool.agents-cli]
deployment_target = "agent_runtime"
project = "your-gcp-enterprise-project"
region = "us-central1"
app_name = "HR_Remediation_Manager_App"
entry_point = "hr_remediation_agent.deploy_gemini:app"
